# indexed_sequential_files_organisation

./: .gitignore  CMakeLists.txt  readme.md
data/: index.db  main.db  overflow.db  temp_index.db  temp_main.db  temp_overflow.db  test.txt
include/: command_parser.hpp  database.hpp  debug.hpp  page_buffer.hpp  scoped_file.hpp  settings.hpp  structures.hpp  utils.hpp
report/: data.csv  data.numbers  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
scripts/: generate_test.py
src/: command_parser.cpp  database.cpp  main.cpp  scoped_file.cpp  utils.cpp
tests/: CMakeLists.txt  readme.md  test_0.txt  test_0_expected.txt  test_1.txt  test_10.txt  test_10_output.txt  test_11.txt  test_11_expected.txt  test_11_output.txt  test_12.txt  test_12_expected.txt  test_12_output.txt  test_13.txt  test_13_expected.txt  test_13_output.txt  test_14.txt  test_14_expected.txt  test_1_output.txt  test_2.txt  test_2_expected.txt  test_3.txt  test_3_expected.txt  test_4.txt  test_4_expected.txt  test_4_output.txt  test_5.txt  test_5_expected.txt  test_5_output.txt  test_6.txt  test_6_expected.txt  test_6_output.txt  test_7.txt  test_7_expected.txt  test_8.txt  test_8_expected.txt  test_8_output.txt  test_9.txt  test_9_output.txt
